fix : fixed alignment.

--- a/teams/Team ADA/Github Repository Tracker/team-ada-master/src/components/Cards.css
+++ b/teams/Team ADA/Github Repository Tracker/team-ada-master/src/components/Cards.css
@@ -8,3 +8,6 @@
 .content {
   padding: 20px;
 }
+.card1 {
+  padding: 0px;
+}
