--- a/teams/Team ADA/Github Repository Tracker/team-ada-master/src/components/Dashboard.css
+++ b/teams/Team ADA/Github Repository Tracker/team-ada-master/src/components/Dashboard.css
@@ -14,6 +14,8 @@
 }
 .main_box {
   height: 80vh;
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+  background-color: bisque;
 }
 
 .container {
